# django-graphql-react-admin

./: .editorconfig  .gitignore
backend/: pyproject.toml
backend/admin/: graphql.py
backend/api/: schema.py  urls.py
backend/dummy/: admin.py  models.py
backend/dummy/migrations/: 0001_initial.py
backend/proj/: settings.py  urls.py  views.py
backend/scripts/: create_dummy_data.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ApolloManager.js  AppProvider.js  Dropdown.js  OldTable.js  Table.js
frontend/src/core/: theme.js
frontend/src/pages/: list.js
